# LArSMC

./: README  README.md
analysis/: BottomRingsPlot.C  CorrectScatLensVsAttLens.C  FitScatLensVsAttLens.C  GraphScatLensVsAttLens.C  MakePDFs.C  analysis_README.md
analysis/larsmc_115nm/: FitPhotonsVsHLAr_115nm.C  GraphPhotonsVsHLAr_115nm.C  HistoPhotonsVsR2_115nm.C  MakeClassFiles_115nm.C  MakePDFs_115nm.C  Track_h101d83cm_115nm.C  Track_h101d83cm_115nm.h  Track_h10d31cm_115nm.C  Track_h10d31cm_115nm.h  Track_h127d22cm_115nm.C  Track_h127d22cm_115nm.h  Track_h17d93cm_115nm.C  Track_h17d93cm_115nm.h  Track_h25d34cm_115nm.C  Track_h25d34cm_115nm.h  Track_h28d09cm_115nm.C  Track_h28d09cm_115nm.h  Track_h2d22cm_115nm.C  Track_h2d22cm_115nm.h  Track_h38d25cm_115nm.C  Track_h38d25cm_115nm.h  Track_h40d79cm_115nm.C  Track_h40d79cm_115nm.h  Track_h50d97cm_115nm.C  Track_h50d97cm_115nm.h  Track_h5d23cm_115nm.C  Track_h5d23cm_115nm.h  Track_h63d65cm_115nm.C  Track_h63d65cm_115nm.h  Track_h76d33cm_115nm.C  Track_h76d33cm_115nm.h  Track_h89d05cm_115nm.C  Track_h89d05cm_115nm.h
analysis/larsmc_125nm/: FitPhotonsVsHLAr_125nm.C  GraphPhotonsVsHLAr_125nm.C  HistoPhotonsVsR2_125nm.C  MakeClassFiles_125nm.C  (+29 more)
justin/: justin_submission_example.sh  lars_mc_onepergdml.jobscript  lars_mc_test.jobscript  rcds_prep.sh
scripts/: cmake_in_container.sh  ninja_in_container.sh  setup_lars.sh
srcs/: CMakeLists.txt  FindROOT.cmake  TBMC.cc  TBMC_115nm.mac  TBMC_125nm.mac  TBMC_129nm.mac  TBMC_135nm.mac  TBMC_140nm.mac  TBMC_150nm.mac  TBMC_155nm.mac  TBMC_180nm.mac  TBMC_60nm.mac  vis.mac
srcs/gdml/: h175_abs90.gdml  h30_abs90.gdml  lars_tallbo.gdml  lars_tallbo_h101d83.gdml  lars_tallbo_h101d83_ref.gdml  lars_tallbo_h10d31.gdml  lars_tallbo_h10d31_ref.gdml  lars_tallbo_h127d22.gdml  lars_tallbo_h127d22_ref.gdml  lars_tallbo_h17d93.gdml  lars_tallbo_h17d93_ref.gdml  lars_tallbo_h25d34.gdml  lars_tallbo_h25d34_ref.gdml  lars_tallbo_h28d09.gdml  lars_tallbo_h28d09_ref.gdml  lars_tallbo_h2d22.gdml  lars_tallbo_h2d22_ref.gdml  lars_tallbo_h38d25.gdml  lars_tallbo_h38d25_ref.gdml  lars_tallbo_h40d79.gdml  lars_tallbo_h40d79_ref.gdml  lars_tallbo_h50d97.gdml  lars_tallbo_h50d97_ref.gdml  lars_tallbo_h5d23.gdml  lars_tallbo_h5d23_ref.gdml  lars_tallbo_h63d65.gdml  lars_tallbo_h63d65_ref.gdml  lars_tallbo_h76d33.gdml  lars_tallbo_h76d33_ref.gdml  lars_tallbo_h89d05.gdml  lars_tallbo_h89d05_ref.gdml  lars_tallbo_true.gdml  lars_tallbo_true_h101d83.gdml  lars_tallbo_true_h101d83_v2.gdml  lars_tallbo_true_h127d22.gdml  lars_tallbo_true_h127d22_v2.gdml  lars_tallbo_true_h25d34.gdml  lars_tallbo_true_h25d34_v2.gdml  lars_tallbo_true_h2d22.gdml  lars_tallbo_true_h2d22_v2.gdml  (+10 more)
srcs/include/: TBMC_ActionInitialization.hh  TBMC_Analysis.hh  TBMC_EventAction.hh  TBMC_GDMLDetectorConstruction.hh  TBMC_PrimaryGeneratorAction.hh  TBMC_Run.hh  TBMC_RunAction.hh  TBMC_SteppingAction.hh  TBMC_TrackingAction.hh
srcs/src/: TBMC_ActionInitialization.cc  TBMC_Analysis.cc  TBMC_EventAction.cc  TBMC_GDMLDetectorConstruction.cc  TBMC_PrimaryGeneratorAction.cc  TBMC_Run.cc  TBMC_RunAction.cc  TBMC_SteppingAction.cc  TBMC_TrackingAction.cc
tools/: gdml_vis.c
(+277 files in other folders)
